Fix download link and hide download button on mobile

--- a/css/style-mobile.css
+++ b/css/style-mobile.css
@@ -165,9 +165,7 @@
             }
             
             #banner .download {
-                font-size: 20px;
-                line-height: 0.5em;
-                padding: 0.3em;
+                display:none;
             }
 
 /* Main */
